@@ -1,2 +1,9 @@
-SUBDIRS = src
+SUBDIRS = intl po src
 
+ACLOCAL_AMFLAGS = -I m4
+
+EXTRA_DIST = config.rpath m4/ChangeLog
+
+clean-local:
+	rm -rf ../scourge_data/translations
+	
